# nhkprep_skeleton

./: .gitignore  README.md  debug_imdb.py  debug_page_parsing.py  debug_subtitles.py  demo_caching.py  demo_cli.py  demo_toolset.py  extract_modern.py  pyproject.toml  ruff.toml  sample.mkv  simple_debug.py  test_cli.py  test_cli_integration.py  test_detection.py
.nhkprep_cache/: cache.db
docs/original_lang/: README.md  api_reference.md  cli_reference.md  configuration.md  examples.md  implementation_guide.md  module_structure.md  quick_start.md  troubleshooting.md
src/nhkprep/: align.py  asr.py  cli.py  config.py  dataset.py  enhanced_language_detect.py  errors.py  filename_parser.py  language_detect.py  logging_setup.py  media_edit.py  media_probe.py  metrics.py  paths.py  performance_language_detect.py  report.py  shell.py  subs_formatting.py  subs_io.py
src/nhkprep/mt/: base.py  http.py  local.py
src/nhkprep/ocr/: base.py  paddleocr_impl.py
src/nhkprep/original_lang/: __init__.py  base.py  cache.py  config.py  imdb.py  no_op_cache.py  tmdb.py
tests/: test_cache.py  test_config_integration.py  test_detector_caching.py  test_imdb_backend.py  test_multi_backend.py  test_original_lang.py  test_original_lang_config.py  test_tmdb_backend.py  test_tmdb_integration.py
tests/fixtures/: sample_ffprobe.json
