[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "nhkprep"
version = "0.1.0"
description = "NHK -> English media prep and translation pipeline (CLI)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name="Your Name"}]
dependencies = [
  "typer>=0.12.5",
  "rich>=13.7.1",
  "structlog>=24.1.0",
  "pydantic>=2.8.2",
  "anyio>=4.4.0",
  "sacrebleu>=2.4.3",
  "langdetect>=1.0.9",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.11.1",
  "ruff>=0.6.8",
]

[project.scripts]
nhkprep = "nhkprep.cli:app"

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B"]
ignore = ["E203","E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
